<resources>
    <string name="app_name">Know Your Government</string>
    <string name="todo">TODO</string>
    <string name="about">About</string>
    <string name="set_location">Set Location</string>
    <string name="know_your_government">Know Your Government</string>
    <string name="addError">No address to display</string>
    <string name="my_text_view">My text view</string>
    <string name="know_your_governement">Know Your Governement</string>
    <string name="powered_by">Powered By</string>
    <string name="google_civic_information_api">Google Civic Information API</string>
    <string name="_2020_richard_watson">© 2020, Richard Watson</string>
    <string name="version_1_0">Version 1.0</string>
</resources>